<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/colorBackground1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainPageActivity">

    <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="3">

        <android.support.v7.widget.AppCompatTextView
                android:text="@string/appTitle"
                android:id="@+id/title"
                android:gravity="center"
                android:textSize="30sp"
                app:fontFamily="@font/roboto"
                android:textColor="@color/colorFont1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp" android:layout_marginEnd="5dp">
        </android.support.v7.widget.AppCompatTextView>

    </LinearLayout>

    <ScrollView
            android:requiresFadingEdge="vertical"
            android:fadingEdgeLength="150dp"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="15"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/scroll_view">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_accelerometer"
                        android:text="@string/accelerometer"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_accelerometer"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_gravity"
                        android:text="@string/gravity"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_gravity"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_gyroscope"
                        android:text="@string/gyroscope"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_gyroscope"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_light"
                        android:text="@string/light"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_light"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_linearAcceleration"
                        android:text="@string/linearAcceleration"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_linearAcceleration"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_magneticField"
                        android:text="@string/magneticField"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_magneticField"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_proximity"
                        android:text="@string/proximity"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_proximity"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_rotationVector"
                        android:text="@string/rotationVector"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <ImageButton
                        android:id="@+id/imageButton_rotationVector"
                        android:layout_width="0dp"
                        android:background="@color/colorBackground1"
                        android:layout_gravity="center"
                        android:layout_height="45dp" android:layout_weight="1"
                        app:srcCompat="@android:drawable/ic_menu_send"
                        android:contentDescription="@string/todo"/>

            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp">

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/button_gpsPosition"
                        android:text="@string/gpsPosition"
                        app:fontFamily="@font/roboto"
                        android:textAllCaps="false"
                        android:textSize="23sp"
                        android:textColor="@color/colorFont1"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_button"
                        android:layout_width="0dp"
                        android:layout_height="45dp" android:layout_weight="9"/>

                <TextView
                    android:layout_width="0dp"
                    android:background="@color/colorBackground1"
                    android:layout_gravity="center"
                    android:layout_height="45dp" android:layout_weight="1"/>

                <!--<ImageButton-->
                        <!--android:id="@+id/imageButton_gpsPosition"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:background="@color/colorBackground1"-->
                        <!--android:layout_gravity="center"-->
                        <!--android:layout_height="45dp" android:layout_weight="1"-->
                        <!--app:srcCompat="@android:drawable/ic_menu_send"-->
                        <!--android:contentDescription="@string/todo"/>-->

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <SeekBar
            android:id="@+id/delay_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_weight="0.5"
            android:layout_marginRight="20dp" android:layout_marginEnd="20dp"
            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp" android:layout_weight="2.5">

        <LinearLayout
                android:background="@drawable/rounded_button"
                android:layout_width="0dp" android:layout_height="55dp"
                android:layout_weight="9"
                android:orientation="vertical"
                android:layout_marginRight="5dp" android:layout_marginEnd="5dp"
                android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
                android:layout_gravity="center">

            <TextView
                    android:id="@+id/textView_mDelay"
                    android:text="1 record(s)"
                    android:textSize="21sp"
                    android:textColor="@color/colorFont1"
                    app:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:ems="10"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" android:layout_weight="9"
                    />

            <TextView
                    android:text="per second"
                    android:textSize="15sp"
                    android:textColor="@color/colorFont1"
                    app:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:ems="10"
                    android:layout_width="match_parent"
                    android:layout_height="35dp" android:layout_weight="9"
            />

        </LinearLayout>


        <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_record"
                android:text="@string/record"
                android:textSize="23sp"
                android:textColor="@color/colorFont1"
                app:fontFamily="@font/roboto"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button_selected"
                android:layout_width="0dp"
                android:layout_height="55dp" android:layout_weight="9"
                android:layout_marginLeft="5dp" android:layout_marginStart="5dp"
                android:layout_marginRight="50dp" android:layout_marginEnd="20dp"
                tools:ignore="NestedWeights"/>


    </LinearLayout>

    <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/textView2" android:layout_weight="1"/>


</LinearLayout>